fixed subtitle spacing (again) and adjusted description text size

--- a/app/globals.css
+++ b/app/globals.css
@@ -209,7 +209,6 @@ body {
   flex-direction: row;
   transform: rotate(1deg);
   margin-left: 1rem;
-  margin-top: 1rem;
   gap: 0.5rem;
 }
 
@@ -217,7 +216,7 @@ body {
   display: flex;
   flex-direction: row;
   margin-top: -2rem;
-  margin-left: 1.5rem;
+  margin-left: 3rem; 
   gap: 0.4rem;
   transform: rotate(-1deg);
 }
@@ -226,7 +225,7 @@ body {
 .description {
   font-family: var(--font-hershey), serif;
   color: var(--dark-brown);
-  font-size: 0.75rem;
+  font-size: 0.5rem;
   margin-bottom: 0.75rem;
   line-height: 1.625;
 }
